# cputrace-studio

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
agent/: .gitignore  CMakeLists.txt
agent/src/: json_writer.h  main.cpp  perf_counter.cpp  perf_counter.h  perf_hello.cpp  proc_stat.cpp  proc_stat.h  proc_status.cpp  proc_status.h  symbol_resolver.cpp  symbol_resolver.h  test_agent.sh  test_app.cpp
backend/: cputrace.db  database.py  main.py  models.py  requirements.txt  schemas.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  api.ts  index.css
